<fix>[itemsetCards]: ensured that long descriptions dont change the length of the card. text no longer overflows beyond the card

--- a/src/components/itemSetCard.module.css
+++ b/src/components/itemSetCard.module.css
@@ -27,10 +27,12 @@ h3 {
     }
 
     & > p:last-of-type {
-        min-height: 240px;
+        height: 174px;
+        font-size: var(--prg_sm);
         color: var(--bg-secondary);
         padding: var(--padding_wrapper);
         background-color: var(--color-secondary);
+        overflow: hidden;
     }
 }
 
